--- a/ripple.css
+++ b/ripple.css
@@ -38,3 +38,7 @@ canvas{
     background-color: white;
     color: #ee1600;
 }
+#ambulance-data{
+    background-color: black;
+    color: white;
+}
